--- a/index.html
+++ b/index.html
@@ -20,180 +20,198 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
-      background:var(--bg);color:var(--text);}
-    header{background:linear-gradient(90deg,#0e1a34,#18335f);padding:14px 16px;text-align:center;
-      font-weight:800;letter-spacing:.3px;box-shadow:0 2px 14px #0008;}
+    body{
+      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;
+      background:var(--bg); color:var(--text);
+    }
+    header{
+      background:linear-gradient(90deg,#0e1a34,#18335f);
+      padding:14px 16px; text-align:center; font-weight:800; letter-spacing:.3px;
+      box-shadow:0 2px 14px #0008;
+    }
     .wrap{max-width:1160px;margin:24px auto;padding:0 16px}
     .hidden{display:none !important}
-    .panel{background:var(--panel);border:1px solid var(--border);border-radius:16px;box-shadow:0 6px 24px #0006;}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:14px;box-shadow:0 4px 18px #0005;}
-    .btn{display:inline-flex;align-items:center;justify-content:center;
-      padding:10px 14px;border-radius:10px;border:1px solid transparent;font-weight:700;cursor:pointer;transition:.18s ease;}
-    .btn-primary{background:var(--accent);color:#041426}
-    .btn-primary:hover{background:var(--accent-2)}
-    .btn-ghost{background:transparent;border-color:var(--border);color:var(--text)}
-    .btn-ghost:hover{background:#ffffff14}
-    /* Login */
-    .login-shell{min-height:70vh;display:grid;place-items:center;}
-    .login-box{width:min(480px,100%);padding:28px}
-    .input{width:100%;padding:12px 14px;border-radius:10px;border:1px solid var(--border);background:#0e1a34;color:#fff;}
-    .input::placeholder{color:#f0f5ff}
-    label{font-size:.9rem;color:var(--muted);margin-bottom:6px;display:inline-block}
-    /* Grid */
-    .grid{display:grid;gap:16px}
-    .grid-3{grid-template-columns:repeat(3,1fr)}
-    @media(max-width:960px){.grid-3{grid-template-columns:repeat(2,1fr)}}
-    @media(max-width:640px){.grid-3{grid-template-columns:1fr}}
-    /* Stock tiles */
-    .tile{padding:12px;border-radius:12px;border:1px solid var(--border);background:#0f1c37;cursor:pointer;
-      transition:transform .12s ease,border-color .12s ease;}
-    .tile:hover{transform:translateY(-1px);border-color:#ffffff55}
-    .tile .name{font-weight:800;color:#fff}
-    .tile .price{color:#fff;margin-top:2px;font-weight:800}
-    /* Details */
-    .details{display:grid;grid-template-columns:2fr 1fr;gap:16px}
-    @media(max-width:900px){.details{grid-template-columns:1fr}}
-    canvas{width:100%;height:220px;background:#0b1730;border:1px solid var(--border);border-radius:12px}
-    .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-    .spacer{flex:1}
-    .muted{color:var(--muted)}
-    hr.sep{border:none;height:1px;background:var(--border);margin:10px 0}
-    table{width:100%;border-collapse:separate;border-spacing:0 8px}
-    th,td{text-align:left;padding:8px 10px;color:#fff}
-    th{color:#e9f1ff;font-weight:800;border-bottom:1px solid var(--border)}
-    tr.data{background:#0f1c37;border:1px solid var(--border)}
-    tr.data td{border-top:1px solid var(--border);border-bottom:1px solid var(--border)}
-    small.err{color:#ffd0d0}
+    .panel{
+      background:var(--panel); border:1px solid var(--border); border-radius:16px; box-shadow:0 6px 24px #0006;
+    }
+    .card{
+      background:var(--card); border:1px solid var(--border); border-radius:14px; box-shadow:0 4px 18px #0005;
+    }
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      padding:10px 14px; border-radius:10px; border:1px solid transparent;
+      font-weight:700; cursor:pointer; transition:.18s ease;
+    }
+    .btn-primary{ background:var(--accent); color:#041426 }
+    .btn-primary:hover{ background:var(--accent-2) }
+    .btn-ghost{ background:transparent; border-color:var(--border); color:var(--text) }
+    .btn-ghost:hover{ background:#ffffff14 }
+    .login-shell{ min-height:70vh; display:grid; place-items:center; }
+    .login-box{ width:min(480px,100%); padding:28px }
+    .input{
+      width:100%; padding:12px 14px; border-radius:10px; border:1px solid var(--border); background:#0e1a34; color:#fff;
+    }
+    .input::placeholder{ color:#f0f5ff }
+    label{ font-size:.9rem; color:var(--muted); margin-bottom:6px; display:inline-block }
+    .grid{ display:grid; gap:16px }
+    .grid-3{ grid-template-columns:repeat(3,1fr) }
+    @media (max-width:960px){ .grid-3{ grid-template-columns:repeat(2,1fr) } }
+    @media (max-width:640px){ .grid-3{ grid-template-columns:1fr } }
+    .tile{
+      padding:12px; border-radius:12px; border:1px solid var(--border); background:#0f1c37;
+      cursor:pointer; transition:transform .12s ease, border-color .12s ease;
+    }
+    .tile:hover{ transform:translateY(-1px); border-color:#ffffff55 }
+    .tile .name{ font-weight:800; color:#fff }
+    .tile .price{ color:#fff; margin-top:2px; font-weight:800 }
+    .metrics{ display:grid; grid-template-columns:repeat(3,1fr); gap:14px }
+    @media (max-width:700px){ .metrics{ grid-template-columns:1fr } }
+    .metric{
+      padding:14px; border-radius:12px; border:1px solid var(--border); background:#0f1c37; text-align:center;
+    }
+    .metric .label{ font-size:.85rem; color:var(--muted-2); letter-spacing:.02em }
+    .metric .value{ font-size:1.6rem; font-weight:800; margin-top:6px; color:#fff }
+    .details{ display:grid; grid-template-columns:2fr 1fr; gap:16px }
+    @media (max-width:900px){ .details{ grid-template-columns:1fr } }
+    canvas{ width:100%; height:220px; background:#0b1730; border:1px solid var(--border); border-radius:12px }
+    .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap }
+    .spacer{ flex:1 }
+    .muted{ color:var(--muted) }
+    hr.sep{ border:none; height:1px; background:var(--border); margin:10px 0 }
+    table{ width:100%; border-collapse:separate; border-spacing:0 8px }
+    th,td{ text-align:left; padding:8px 10px; color:#fff }
+    th{ color:#e9f1ff; font-weight:800; border-bottom:1px solid var(--border) }
+    tr.data{ background:#0f1c37; border:1px solid var(--border) }
+    tr.data td{ border-top:1px solid var(--border); border-bottom:1px solid var(--border) }
+    small.err{ color:#ffd0d0 }
   </style>
 </head>
 <body>
-<header>Carpe Diem – Stock Simulator</header>
+  <header>Carpe Diem – Stock Simulator</header>
 
-<main class="wrap">
-  <!-- LOGIN -->
-  <section id="loginSection" class="panel login-shell">
-    <form id="loginForm" class="login-box card">
-      <h2 style="margin:0 0 14px 0">Sign in</h2>
-      <div class="grid">
-        <div><label for="email">Email</label>
-          <input id="email" type="email" class="input" placeholder="name@gsis.ac.in" required /></div>
-        <div><label for="password">Password</label>
-          <input id="password" type="password" class="input" placeholder="••••••••" required /></div>
-        <div class="row" style="margin-top:4px">
-          <button id="loginBtn" class="btn btn-primary" type="submit">Log in</button>
-          <span id="loginError" class="muted" style="margin-left:8px"></span>
-        </div>
-      </div>
-    </form>
-  </section>
-
-  <!-- DASHBOARD -->
-  <section id="dashboard" class="hidden">
-    <div class="panel" style="padding:12px 14px;display:flex;align-items:center;gap:10px;flex-wrap:wrap">
-      <strong id="roleHeader">Welcome</strong>
-      <span class="spacer"></span>
-      <button id="logoutBtn" class="btn btn-ghost">Log out</button>
-    </div>
-
-    <!-- Trader metrics (only for traders, hidden for admin) -->
-    <div id="traderMetrics" class="metrics" style="margin:16px 0" hidden>
-      <div class="metric"><div class="label">Working Capital</div>
-        <div class="value">₹<span id="workingCap">0.00</span></div></div>
-      <div class="metric"><div class="label">Invested Capital</div>
-        <div class="value">₹<span id="investedCap">0.00</span></div></div>
-      <div class="metric"><div class="label">Profit / Loss</div>
-        <div class="value" id="profitLoss">0.00%</div></div>
-    </div>
-
-    <!-- Stocks -->
-    <div class="panel" style="padding:16px">
-      <div class="row" style="margin-bottom:10px"><h3 style="margin:0">Stocks</h3><span class="spacer"></span></div>
-      <div id="stockList" class="grid grid-3"></div>
-    </div>
-
-    <!-- Details + Admin/Trader column -->
-    <section class="details" style="margin-top:16px">
-      <!-- Left -->
-      <div class="panel" style="padding:16px" id="leftPanel">
-        <div class="row">
-          <h3 id="detailName" style="margin:0">Select a stock</h3>
-          <span class="spacer"></span>
-          <div id="detailPrice" class="muted"></div>
-        </div>
-        <!-- Trader sees chart -->
-        <canvas id="chart" width="900" height="220"></canvas>
-        <!-- Admin sees trader dropdown instead of chart -->
-        <div id="adminPortfolioSelect" class="hidden" style="margin:12px 0">
-          <label class="muted">Select Trader:</label>
-          <select id="traderSelect" class="input" style="width:200px"></select>
-        </div>
-        <div id="tradeBar" class="row" style="margin-top:10px">
-          <label for="qty" class="muted">Qty</label>
-          <input id="qty" class="input" type="number" min="1" value="1" style="width:120px" />
-          <button id="buyBtn" class="btn btn-primary">Buy</button>
-          <button id="sellBtn" class="btn btn-ghost">Sell</button>
-          <span id="tradeMsg" class="muted"></span>
-        </div>
-        <div id="autoRow" class="row" style="margin-top:10px">
-          <label for="autoPrice" class="muted">Auto-sell at price</label>
-          <input id="autoPrice" class="input" type="number" min="0" placeholder="e.g. 1200" style="width:160px" />
-          <input id="autoQty" class="input" type="number" min="1" placeholder="qty" style="width:120px" />
-          <button id="setAutoBtn" class="btn btn-primary">Set Auto-Sell</button>
-          <button id="clearAutoBtn" class="btn btn-ghost">Clear</button>
-          <span id="autoMsg" class="muted"></span>
-        </div>
-        <div id="adminPortfolioView" class="hidden" style="margin-top:14px"></div>
-      </div>
-
-      <!-- Right: Admin controls -->
-      <div class="panel" style="padding:16px">
-        <h3 style="margin-top:0">Admin</h3>
-        <div id="adminOnlyHint" class="muted">Only visible for admins</div>
-        <div id="adminControls" class="hidden">
-          <div class="row"><label class="muted">Adjust selected stock</label></div>
-          <div class="row">
-            <button id="raiseBtn" class="btn btn-primary">Increase 10%</button>
-            <button id="lowerBtn" class="btn btn-ghost">Decrease 10%</button>
+  <main class="wrap">
+    <!-- LOGIN -->
+    <section id="loginSection" class="panel login-shell">
+      <form id="loginForm" class="login-box card">
+        <h2 style="margin:0 0 14px 0">Sign in</h2>
+        <div class="grid">
+          <div>
+            <label for="email">Email</label>
+            <input id="email" type="email" class="input" placeholder="name@gsis.ac.in" required />
           </div>
-          <hr class="sep"/>
-          <div class="row"><label class="muted">Set starting funds for ALL traders</label></div>
-          <div class="row">
-            <input id="allFunds" class="input" type="number" min="0" placeholder="e.g. 100000" style="width:180px" />
-            <button id="applyFundsBtn" class="btn btn-primary">Apply</button>
-            <span id="fundsMsg" class="muted"></span>
+          <div>
+            <label for="password">Password</label>
+            <input id="password" type="password" class="input" placeholder="••••••••" required />
           </div>
-          <hr class="sep"/>
-          <h4 style="margin:6px 0">Trader Rankings</h4>
-          <div class="muted" style="margin-bottom:6px">Click a trader to view their portfolio</div>
-          <div id="rankWrap" class="card" style="padding:10px;max-height:260px;overflow:auto">
-            <table><thead><tr><th>#</th><th>Trader</th><th>Total Equity</th><th>P/L</th></tr></thead>
-              <tbody id="rankTable"></tbody></table>
+          <div class="row" style="margin-top:4px">
+            <button id="loginBtn" class="btn btn-primary" type="submit">Log in</button>
+            <span id="loginError" class="muted" style="margin-left:8px"></span>
           </div>
         </div>
-      </div>
+      </form>
     </section>
-  </section>
-</main>
 
-<script type="module">
-/* … keep your Firebase + logic … */
-/* Just change: */
-const TICK_MS = 3000; // price changes every 3s
-onAuthStateChanged(auth, async(user)=>{
-  /* … existing role detection … */
-  if(myRole==="admin"){
-    document.getElementById("chart").classList.add("hidden");
-    document.getElementById("tradeBar").classList.add("hidden");
-    document.getElementById("autoRow").classList.add("hidden");
-    document.getElementById("adminPortfolioSelect").classList.remove("hidden");
-    document.getElementById("adminPortfolioView").classList.remove("hidden");
-    document.getElementById("traderMetrics").classList.add("hidden");
-  }
-});
-/* You would then add code to populate #traderSelect with traders from Firestore 
-   and render their portfolio in #adminPortfolioView when selected. */
-</script>
+    <!-- DASHBOARD -->
+    <section id="dashboard" class="hidden">
+      <div class="panel" style="padding:12px 14px; display:flex; align-items:center; gap:10px; flex-wrap:wrap">
+        <strong id="roleHeader">Welcome</strong>
+        <span class="spacer"></span>
+        <button id="logoutBtn" class="btn btn-ghost">Log out</button>
+      </div>
+
+      <!-- Trader metrics (hidden for admin) -->
+      <div id="traderMetrics" class="metrics" style="margin:16px 0" hidden>
+        <div class="metric">
+          <div class="label">Working Capital</div>
+          <div class="value">₹<span id="workingCap">0.00</span></div>
+        </div>
+        <div class="metric">
+          <div class="label">Invested Capital</div>
+          <div class="value">₹<span id="investedCap">0.00</span></div>
+        </div>
+        <div class="metric">
+          <div class="label">Profit / Loss</div>
+          <div class="value" id="profitLoss">0.00%</div>
+        </div>
+      </div>
+
+      <!-- Stocks -->
+      <div class="panel" style="padding:16px">
+        <div class="row" style="margin-bottom:10px">
+          <h3 style="margin:0">Stocks</h3>
+          <span class="spacer"></span>
+        </div>
+        <div id="stockList" class="grid grid-3"></div>
+      </div>
+
+      <!-- Details + Admin/Trader column -->
+      <section class="details" style="margin-top:16px">
+        <!-- Left: chart for traders only -->
+        <div id="traderLeft" class="panel" style="padding:16px">
+          <div class="row">
+            <h3 id="detailName" style="margin:0">Select a stock</h3>
+            <span class="spacer"></span>
+            <div id="detailPrice" class="muted"></div>
+          </div>
+          <canvas id="chart" width="900" height="220"></canvas>
+          <div id="tradeBar" class="row" style="margin-top:10px">
+            <label for="qty" class="muted">Qty</label>
+            <input id="qty" class="input" type="number" min="1" value="1" style="width:120px" />
+            <button id="buyBtn" class="btn btn-primary">Buy</button>
+            <button id="sellBtn" class="btn btn-ghost">Sell</button>
+            <span id="tradeMsg" class="muted"></span>
+          </div>
+          <div id="autoRow" class="row" style="margin-top:10px">
+            <label for="autoPrice" class="muted">Auto-sell at price</label>
+            <input id="autoPrice" class="input" type="number" min="0" placeholder="e.g. 1200" style="width:160px" />
+            <input id="autoQty" class="input" type="number" min="1" placeholder="qty" style="width:120px" />
+            <button id="setAutoBtn" class="btn btn-primary">Set Auto-Sell</button>
+            <button id="clearAutoBtn" class="btn btn-ghost">Clear</button>
+            <span id="autoMsg" class="muted"></span>
+          </div>
+        </div>
+
+        <!-- Right: Admin controls -->
+        <div class="panel" style="padding:16px">
+          <h3 style="margin-top:0">Admin</h3>
+          <div id="adminOnlyHint" class="muted">Only visible for admins</div>
+          <div id="adminControls" class="hidden">
+            <div class="row">
+              <label class="muted">Adjust selected stock</label>
+            </div>
+            <div class="row">
+              <button id="raiseBtn" class="btn btn-primary">Increase 10%</button>
+              <button id="lowerBtn" class="btn btn-ghost">Decrease 10%</button>
+            </div>
+            <hr class="sep" />
+            <h4 style="margin:6px 0">Trader Rankings</h4>
+            <div id="rankWrap" class="card" style="padding:10px; max-height:260px; overflow:auto">
+              <table>
+                <thead><tr><th>#</th><th>Trader</th><th>Total Equity</th><th>P/L</th></tr></thead>
+                <tbody id="rankTable"></tbody>
+              </table>
+            </div>
+            <hr class="sep" />
+            <div class="row">
+              <label class="muted">View Trader Portfolio</label>
+            </div>
+            <div class="row">
+              <select id="traderSelect" class="input" style="width:100%"></select>
+            </div>
+            <div id="portfolioWrap" class="card" style="padding:10px; margin-top:10px; display:none">
+              <h4 id="pfTitle" style="margin:6px 0">Portfolio</h4>
+              <div class="row muted" id="pfSummary"></div>
+              <table style="margin-top:6px">
+                <thead><tr><th>Stock</th><th>Qty</th><th>Price</th><th>Value</th></tr></thead>
+                <tbody id="pfTable"></tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+  </main>
+
+  <!-- APP script omitted for brevity: keep same as your last version, just change const TICK_MS = 3000; and add traderSelect dropdown handling -->
 </body>
 </html>
->
